# investigation-graph

./: .gitignore  DEVIATIONS.md  Makefile  ONTOLOGY.md  README.md  SPEC.md  TODO.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
docs/: FOR-INVESTIGATORS.md  ROADMAP.md  database-choice.md  privacy-guide.md
docs/proposals/: dedup-tools.md  visual-ingestion.md
eval/: _frontier_oracle_check.py  driver.py  eval_edge_extraction.py  eval_er_multifield.py  eval_full_pipeline.py  eval_structured_r1.py  fixture_realistic.py
examples/fedfiling-case/: CASE-STUDY.md  sources.json
examples/fedfiling-case/evidence/: manifest.jsonl
examples/fedfiling-case/inputs/: README.txt
examples/fedfiling-case/viz/: README.md  app.js  data.js  index.html  style.css
examples/good-dogs/: CASE-STUDY.md  GAPS-MEASURED.md  GAPS.md  ONTOLOGY-gold.md  ONTOLOGY.md  SPEC.md
examples/good-dogs/corpus-source/: ONTOLOGY.md  README.md  ontology.yaml
examples/good-dogs/enrichment/: 2014-avma-breed-dog-bite-risk-review.md
examples/good-dogs/findings/: edges.jsonl  entities.jsonl
examples/good-dogs/findings-gold/: edges.jsonl  entities.jsonl
examples/good-dogs/viz/: README.md  app.js  data.js  gen_data.py  index.html  style.css
examples/sample-investigation/: README.md  financial-disclosure.html  harbor-city-expose.txt  property-records.md
investigation_graph/: __init__.py  briefing.py  check.py  chunk_store.py  chunking.py  config.py  doc_claims.py  embed.py  extract.py  flow.py  graph.py  infer.py  lossless_merge.py  media_setup.py  migrations.py  ocr.py  ontology.py  pipeline.py  queries.py  resolution.py  semantic_gate.py
investigation_graph/capture/: __init__.py  cdp.py  manifest.py  registry.py  video.py  web.py
investigation_graph/dedup/: __init__.py  splink_multifield.py  splink_tier.py  tiers.py
investigation_graph/interop/: __init__.py  ftm.py
investigation_graph/media/: __init__.py  base.py  document.py  image.py  visual_backend.py
investigation_graph/processors/: __init__.py  tabular.py
newsroom_graph/: __init__.py  check.py  chunk_store.py  config.py  embed.py  extract.py  graph.py  migrations.py  ontology.py  pipeline.py  queries.py  topology.py
scripts/: audit.py  build_graph_from_corpus_gold.py  build_graph_from_findings.py  capture_breach.py  capture_domain.py  capture_sources.py  capture_sunbiz.py  daily_briefing.py  eval_flow.py  eval_ftm.py  eval_gates.py  eval_inference.py  eval_structured_dedup.py  eval_tabular.py  ingest_folder.py  rebuild_graph.py  run_analysis.py  search_cli.py  validate_ontology.py
tests/: gate_prov.py  test_capture_breach.py  test_capture_manifest.py  test_dedup_tiers.py  test_doc_claims.py  test_eval_gates.py  test_flow.py  test_ftm_crosswalk.py  test_ground.py  test_inference.py  test_inferred_review.py  test_lossless_merge.py  test_media.py  test_media_integration.py  test_multifield_address.py  test_ocr.py  test_resolution_seam.py  test_semantic_gate.py  test_smoke.py  test_tabular_ingest.py  test_tabular_robustness.py  test_visual.py
tests/fixture_corpus/: doc1.txt  doc2.txt
tests/fixture_tabular/: ownership.csv  ownership.map.yaml  payments.csv  payments.map.yaml
