[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-newsroom-graph"
version = "0.1.0"
description = "Knowledge graph toolkit for investigative journalism"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ben West", email = "ben@benwest.blog" },
]
keywords = ["knowledge-graph", "journalism", "investigation", "ladybugdb", "graph-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "real_ladybug>=0.15.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "ollama>=0.3.0",
    # DuckDB is the base substrate (chunks + embeddings + BM25 FTS) — always
    # present; the graph is the DuckDB(base) + LadybugDB(graph) hybrid.
    "duckdb>=1.0.0",
    # Shared KG substrate. Public in parallel with this repo; until then install
    # editable: pip install -e "../kg-common[ladybug,ollama,dedup,measure]"
    "kg-common @ git+https://github.com/M0nkeyFl0wer/kg-common.git",
]

[project.optional-dependencies]
topology = ["ripser>=0.6.0"]
dev = ["pytest>=8.0", "pytest-mock", "pytest-timeout", "ruff"]

[project.scripts]
nr-ingest = "scripts.ingest_folder:main"
nr-search = "scripts.search_cli:main"
nr-analyze = "scripts.run_analysis:main"
nr-briefing = "scripts.daily_briefing:main"
nr-validate = "scripts.validate_ontology:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py310"
line-length = 100

# Required for the direct `kg-common @ git+https://...` reference above.
[tool.hatch.metadata]
allow-direct-references = true
