[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investigation-graph"
version = "0.1.0"
description = "Local knowledge-graph toolkit for investigative journalists, OSINT investigators, and researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ben West", email = "ben@benwest.blog" },
]
keywords = ["knowledge-graph", "journalism", "investigation", "ladybugdb", "graph-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Pinned to the validated build (graph behaviors differ across versions; see
    # SPEC §2.1 and the 2026-06-19 corruption-repro note).
    "real_ladybug==0.15.3",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "ollama>=0.3.0",
    # DuckDB is the base substrate (chunks + embeddings + BM25 FTS) — always
    # present; the graph is the DuckDB(base) + LadybugDB(graph) hybrid.
    "duckdb>=1.0.0",
    # Shared KG substrate. Public in parallel with this repo; until then install
    # editable: pip install -e "../kg-common[ladybug,ollama,dedup,measure]"
    "kg-common @ git+https://github.com/M0nkeyFl0wer/kg-common.git",
]

[project.optional-dependencies]
topology = ["ripser>=0.6.0"]
# OCR for scanned PDFs + image files (P0.3). Also needs system binaries:
#   tesseract-ocr (the OCR engine) and poppler-utils (pdftoppm, pdftotext).
ocr = ["pytesseract>=0.3", "pillow>=10"]
dev = ["pytest>=8.0", "pytest-mock", "pytest-timeout", "ruff"]

[project.scripts]
ig-ingest = "scripts.ingest_folder:main"
ig-search = "scripts.search_cli:main"
ig-analyze = "scripts.run_analysis:main"
ig-briefing = "scripts.daily_briefing:main"
ig-validate = "scripts.validate_ontology:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py310"
line-length = 100

# Required for the direct `kg-common @ git+https://...` reference above.
[tool.hatch.metadata]
allow-direct-references = true
