[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investigation-graph"
version = "0.1.0"
description = "Local knowledge-graph toolkit for investigative journalists, OSINT investigators, and researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ben West", email = "ben@benwest.blog" },
]
keywords = ["knowledge-graph", "journalism", "investigation", "ladybugdb", "graph-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Pinned to the validated build for reproducibility (graph behaviors differ
    # across versions; see SPEC §2.1).
    "real_ladybug==0.15.3",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "ollama>=0.3.0",
    # DuckDB is the base substrate (chunks + embeddings + BM25 FTS) — always
    # present; the graph is the DuckDB(base) + LadybugDB(graph) hybrid.
    "duckdb>=1.0.0",
    # Shared KG substrate. Public in parallel with this repo; until then install
    # editable: pip install -e "../kg-common[ladybug,ollama,dedup,measure]"
    # [media] pulls the optional media subsystem extras (OCR/vision) — images +
    # scanned PDFs. Drop the extra if a deployment doesn't need visual ingestion.
    "kg-common[media] @ git+https://github.com/M0nkeyFl0wer/kg-common.git",
]

[project.optional-dependencies]
topology = ["ripser>=0.6.0"]
# OCR for scanned PDFs + image files (P0.3). Also needs system binaries:
#   tesseract-ocr (the OCR engine) and poppler-utils (pdftoppm, pdftotext).
ocr = ["pytesseract>=0.3", "pillow>=10"]
# Evidentiary web capture: headless-browser screenshot + rendered HTML + print-PDF
# with SHA-256 provenance (investigation_graph/capture). After install, fetch the
# browser binary once: `python -m playwright install chromium`. ffmpeg (video
# keyframes) and the manifest core are stdlib/system-binary, so they need no extra.
capture = ["playwright>=1.40", "websocket-client>=1.6"]
# FollowTheMoney / BODS interop crosswalk (P2.5). Optional — the dep-light core
# does not require it; only `investigation_graph.interop.ftm` does. Crosswalk
# verified against followthemoney 4.9.2 (see DEVIATIONS.md).
interop = ["followthemoney>=4.9,<5"]
# Probabilistic structured dedup (P2.4/PUB.5). Optional — the adopted common-case
# tier is the dep-free deterministic normalized-name tier; Splink is reserved for
# multi-field messy records (eval showed it undertrained on single-field variants).
dedup-structured = ["splink>=4.0,<5"]
dev = ["pytest>=8.0", "pytest-mock", "pytest-timeout", "ruff"]

[project.scripts]
ig-ingest = "scripts.ingest_folder:main"
ig-search = "scripts.search_cli:main"
ig-analyze = "scripts.run_analysis:main"
ig-briefing = "scripts.daily_briefing:main"
ig-validate = "scripts.validate_ontology:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py310"
line-length = 100

# Required for the direct `kg-common @ git+https://...` reference above.
[tool.hatch.metadata]
allow-direct-references = true
